--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <img src="https://i.ibb.co/sg2km0t/profleimage.jpg" alt="profleimage" border="0">
     <h1>Hello, my name is Damon.</h1>
     <p>Welcome to my portfolio site.</p>
+    <div class="techstack">
+      <ul class="techstack--ul">
+        <li>Software Developer</li>
+      </ul>
+    </div>
   </section>
 
   <section class="project">
@@ -27,6 +32,15 @@
   <section class="project-description">
     <h1>Califight</h1>
     <p>A platform connecting fighters and academies for following fighters, events and setup matching making.</p>
+    <div class="techstack">
+      <ul class="techstack--ul">
+        <li>React</li>
+        <li>Redux</li>
+        <li>Node</li>
+        <li>Express</li>
+        <li>DynamoDB</li>
+      </ul>
+    </div>
     <div class="link-container">
       <a>
         <i class="fa-2x fas fa-link"></i>
@@ -49,6 +63,15 @@
   <section class="project-description">
     <h1>WheelChimp</h1>
     <p>A marketplace for selling and buying rims.</p>
+    <div class="techstack">
+      <ul class="techstack--ul">
+        <li>React</li>
+        <li>Redux</li>
+        <li>Node</li>
+        <li>Express</li>
+        <li>PostgreSQL</li>
+      </ul>
+    </div>
     <div class="link-container">
       <a>
         <i class="fa-2x fas fa-link"></i>
