--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </section>
 
   <section class="project-description">
-    <h1>WheelChimp</h1>
+    <h1>Wheelchimp</h1>
     <p>A marketplace for selling and buying rims.</p>
     <div class="techstack">
       <ul class="techstack--ul">
