--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </ul>
     </div>
     <div class="link-container">
-      <a>
+      <a href="http://califight.com/">
         <i class="fa-2x fas fa-link"></i>
       </a>
       <a>
@@ -73,7 +73,7 @@
       </ul>
     </div>
     <div class="link-container">
-      <a>
+      <a href="https://www.wheelchimp.com">
         <i class="fa-2x fas fa-link"></i>
       </a>
       <a>
