Allow links to open to new tabs.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       </ul>
     </div>
     <div class="link-container">
-      <a href="http://califight.com/">
+      <a href="http://califight.com/" target="_blank">
         <i class="fa-2x fas fa-link"></i>
       </a>
-      <a>
+      <a target="_blank">
         <i class="fa-2x fab fa-github"></i>
       </a>
     </div>
@@ -73,10 +73,10 @@
       </ul>
     </div>
     <div class="link-container">
-      <a href="https://www.wheelchimp.com">
+      <a href="https://www.wheelchimp.com" target="_blank">
         <i class="fa-2x fas fa-link"></i>
       </a>
-      <a>
+      <a target="_blank">
         <i class="fa-2x fab fa-github"></i>
       </a>
     </div>
