--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="rings">
     <div class="ring--intro">
-      <h1>Hello, I'm is <span>Damon Nguyen</span>.</h1>
+      <h1>Hello, I'm <span>Damon</span>.</h1>
       <p>I'm a web developer.</p>
     </div>
   </div>
@@ -27,7 +27,7 @@
 
   <div class="sec-description">
     <p>
-      A software developer who is proficient in JavaScript. Loves to use modern technology like React to build dynamic and responsive user interface. Though spending a lot of time using modern frontend tech stacks a focus on the fundamentals of HTML, CSS and JavaScript is a must allowing for a deeper understanding and creative solution. Not only limited to frontend development but able to contribute to the backend using technology like Node.js. 
+      I am software developer who is proficient in JavaScript. I love to use modern technology like React to build dynamic and responsive user interface. Although I spending a lot of time using modern frontend technologies I have a strong foundation in my HTML, CSS and JavaScript allowing me to be creative with my solutions. I am not only limited to frontend development but able to develop the backend. 
     </p>
   </div>
 
@@ -58,9 +58,9 @@
           <a href="http://califight.com/" target="_blank">
             <i class="fa-2x fas fa-link"></i>
           </a>
-          <a target="_blank">
+<!--           <a target="_blank">
             <i class="fa-2x fab fa-github"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </div>
@@ -91,9 +91,9 @@
         <a href="https://www.wheelchimp.com" target="_blank">
           <i class="fa-2x fas fa-link"></i>
         </a>
-        <a target="_blank">
+<!--         <a target="_blank">
           <i class="fa-2x fab fa-github"></i>
-        </a>
+        </a> -->
       </div>
     </div>
   </div>
