Added demo pages and updaupdated califight demo video.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
   <div class="project-sec">
     <div class="container-vid-des">
       <div class="project-vid">
-        <video class="video" loop controls="false" autoplay muted>
-        <source src="califightv2.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-        </video>
+        <a href="califight-demo.html">
+          <video class="video" loop controls="false" autoplay muted>
+            <source src="califightv3.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </a>
       </div>
 
       <div class="project-description">
@@ -69,10 +71,12 @@
 <div class="project-sec">
   <div class="container-vid-des">
     <div class="project-vid">
-      <video class="video" loop controls="false" autoplay muted>
-      <source src="wheelchimpv2.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
+      <a href="wheelchimp-demo.html">
+        <video class="video" loop controls="false" autoplay muted>
+        <source src="wheelchimpv2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </a>
     </div>
 
     <div class="project-description">
@@ -85,6 +89,7 @@
           <li>Node</li>
           <li>Express</li>
           <li>PostgreSQL</li>
+          <li>Heroku</li>
         </ul>
       </div>
       <div class="link-container">
