Update califight description

--- a/califight-demo.html
+++ b/califight-demo.html
@@ -20,7 +20,7 @@
     <div>
     <div class="demo-card-description">
       <h1>Califight</h1>
-      <p>A platform connecting fighters and academies for following fighters, events and setup matching making.</p>
+      <p>A platform allowing fighters to follow other fighters, events and setup up match making.</p>
       <div class="techstack">
         <h2>Tech Stack</h2>
         <ul class="techstack--ul">
