--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="project-description">
         <h4>Califight</h4>
-        <p>A platform connecting fighters and academies for following fighters, events and setup matching making.</p>
+        <p>A platform allowing fighters to follow other fighters, events and setup up match making.</p>
         <div class="techstack">
           <ul class="techstack--ul">
             <li>React</li>
