--- a/califight-demo.html
+++ b/califight-demo.html
@@ -14,7 +14,7 @@
 
   <div class="demo-card">
     <video class="video-demo" loop controls="false" autoplay muted>
-      <source src="califightv3.mp4" type="video/mp4">
+      <source src="califight-demo.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     <div>
