--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="project-vid">
         <a href="califight-demo.html">
           <video class="video" loop controls="false" autoplay muted>
-            <source src="califightv3.mp4" type="video/mp4">
+            <source src="califight-demo.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </a>
