--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="project-description">
         <h4>Califight</h4>
-        <p>A platform allowing fighters to follow other fighters, events and setup up match making.</p>
+        <p>>A social media platform for fighters allowing them to create and manage local events. I've really wanted to create a platform to help fighters get more competition experience without having to spend a lot of money on over priced tournaments by allowing a community to create local events and a platform to be able to find fighters and events.</p>
         <div class="techstack">
           <ul class="techstack--ul">
             <li>React</li>
