--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="rings">
     <div class="ring--intro">
       <h1>Hello, I'm <span>Damon</span>.</h1>
-      <p>I'm a web developer.</p>
+      <p>I'm a software developer.</p>
     </div>
   </div>
 
