--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="project-description">
         <h4>Califight</h4>
-        <p>>A social media platform for fighters allowing them to create and manage local events. I've really wanted to create a platform to help fighters get more competition experience without having to spend a lot of money on over priced tournaments by allowing a community to create local events and a platform to be able to find fighters and events.</p>
+        <p>A social media platform for fighters allowing them to create and manage local events. I've created a platform to help fighters get more competition experience without having to spend a lot of money on over priced tournaments by allowing a community to create and manage local events and connecting them on a single platform.</p>
         <div class="techstack">
           <ul class="techstack--ul">
             <li>React</li>
