--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="container-vid-des">
     <div class="project-vid">
       <a href="wheelchimp-demo.html">
-        <video class="video" loop controls="false" autoplay muted>
+        <video class="video wc" loop controls="false" autoplay muted>
         <source src="wheelchimpv2.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
