--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div class="sec-description">
     <p>
-      I am software developer who is proficient in JavaScript. I love to use modern technology like React to build dynamic and responsive user interface. Although I spending a lot of time using modern frontend technologies I have a strong foundation in my HTML, CSS and JavaScript allowing me to be creative with my solutions. I am not only limited to frontend development but able to develop the backend. 
+      I am software developer who loves coding in JavaScript. I enjoy using modern technology like React to build dynamic and responsive user interface. I also have experience with developing the backend with Node.js, utilizing various databases ranging from nosql and sql and integrating many backend microservices.
     </p>
   </div>
 
