--- a/califight-demo.html
+++ b/califight-demo.html
@@ -20,7 +20,7 @@
     <div>
     <div class="demo-card-description">
       <h1>Califight</h1>
-      <p>A social media platform for fighters allowing them to create and manage local events. This application will give fighters an opportunity to grow their skills by competiting more without the hassle of over spending on tournaments.</p>
+      <p>A social media platform for fighters allowing users to create and manage local events.</p>
       <div class="techstack">
         <h2>Tech Stack</h2>
         <ul class="techstack--ul">
