--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="project-description">
-        <h4>Califight</h4>
+        <h4>Tackle and Grapple</h4>
         <p>A social media platform for fighters allowing users to create and manage local events.</p>
         <div class="techstack">
           <ul class="techstack--ul">
