--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div class="sec-description">
     <p>
-      I am software developer who loves coding in JavaScript. I enjoy using modern technology like React to build dynamic and responsive user interface. I also have experience with developing the backend with Node.js, utilizing various databases ranging from nosql and sql and integrating many backend microservices.
+      I am software developer who loves coding in JavaScript. I enjoy using modern technology like React to build dynamic and responsive user interface. I also have experience with developing the backend with Node.js, utilizing various databases ranging from nosql to sql and integrating many backend services.
     </p>
   </div>
 
